# np_lab2

./: .gitignore  Cmakelists.txt  README.md
client/: Client.cpp  Cmakelists.txt  GTCPController.cpp  MainScene.cpp  TCPController.cpp  main.cpp
client/include/: Client.hpp  ClientException.h  GTCPController.h  MainScene.hpp  TCPController.h  ToMsgBox.hpp
lib/: CMakeLists.txt  common.h  error.c
server/: CmakeLists.txt  Competition.cpp  Player.cpp  SNetController.cpp  Server.cpp  main.cpp
server/include/: Competition.h  Player.h  SNetController.h  Server.h  ServerException.h
